# rip_cli

./: Cargo.toml  README.md
.circleci/: config.yml
src/: main.rs  output.rs
