[package]
name = "ripioc_cli"
version = "0.1.0"
authors = ["Oliver Daff <oliverdaff@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.ripioc]
git = "ssh://git@github.com/oliverdaff/ripioc.git"
rev = "8cc750f"