[package]
name = "ripioc_cli"
version = "0.1.0"
authors = ["Oliver Daff <oliverdaff@users.noreply.github.com>"]
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "rioc"

[dependencies]
clap = "2"
serde_json = { version = "1.0"}

[dependencies.ripioc]
git = "ssh://git@github.com/oliverdaff/ripioc.git"
rev = "37c454b"
features = ["serde_support"]